src/objects/ProQuest__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used to activate/deactivate the Trigger functionality</description>
    <fields>
        <fullName>Account_Trigger_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to Activate/Deactivate AccountTrigger</description>
        <label>Account Trigger Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Google Endpoint</description>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Junction_Trigger_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to activate/deactivate JunctionTrigger</description>
        <label>Junction Trigger Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Google API Key</description>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Trigger_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to Activate/Deactivate ProjectTrigger</description>
        <label>Project Trigger Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Trigger_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to Activate/Deactivate Stakeholder Trigger</description>
        <label>Stakeholder Trigger Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>ProQuest</label>
</CustomObject>